--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,34 @@
+@media (min-width: 600px) {
+  .login-box {
+    width: 300px;
+  }
+}
+
+:root {
+  --primary: #3751ff;
+  --background: #363740;
+  --text: #9fa2b4;
+  --highlight: #252733;
+  --border: #c5c7cd;
+
+  color: var(--text);
+}
+
+/* utils */
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+/*--- login styles ----*/
+
 label {
-  color: #9fa2b4;
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
@@ -10,16 +39,14 @@ label {
 }
 
 input {
-  color: #9fa2b4;
+  color: var(--text);
   width: 90%;
 }
 
 .login-box {
   background-color: #ffffff;
-  color: #9fa2b4;
   border-radius: 5px;
   padding: 2em;
-  max-width: 300px;
   align-self: center;
   justify-self: center;
   margin-left: auto;
@@ -89,11 +116,108 @@ h1 {
   font-weight: 700;
   font-size: 19px;
   line-height: 24px;
-
   text-align: center;
   letter-spacing: 0.4px;
+  padding: 0.5em;
+}
 
-  color: #a4a6b3;
+/*--- admin styles ----*/
 
-  opacity: 0.7;
+.admin-layout {
+  display: grid;
+  grid-template-columns: 220px auto;
+  background-color: #f7f8fc;
+}
+
+.sidebar {
+  background-color: var(--background);
+  height: 100vh;
+  padding: 1.5em;
+}
+
+.sidebar-brand {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 1.5em;
+}
+
+.sidebar-link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.sidebar-link > p:hover {
+  background-color: var(--highlight);
+}
+
+.sidebar-link > p {
+  margin-left: 1em;
+  border-radius: 5px;
+  padding: 0.5em;
+  cursor: pointer;
+}
+
+.admin-header {
+  padding: 1em;
+  align-items: center;
+}
+
+.title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  letter-spacing: 0.3px;
+  flex-grow: 1;
+  text-align: left;
+  color: var(--highlight);
+}
+
+.subtitle {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+
+  text-align: right;
+  letter-spacing: 0.2px;
+  padding-left: 1em;
+  padding-right: 1em;
+  color: var(--highlight);
+
+  text-transform: capitalize;
+}
+
+.circle {
+  border-radius: 50%;
+}
+
+.circle-border {
+  border: 1.5px solid var(--border);
+  padding: 3px;
+}
+
+.header-profile {
+  border-left: 1px solid var(--border);
+}
+
+.header-icon {
+  margin-right: 1.5em;
+  color: var(--border);
+}
+
+.table-wrapper {
+  background-color: "white";
+  border-radius: 5px;
+  border: 1px solid var(--border);
+  margin: 1em;
+}
+
+table {
+  table-layout: auto;
+}
+
+thead {
+  border-bottom: 1px solid var(--border);
+  background-color: white;
 }
