--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,14 @@
   .login-box {
     width: 300px;
   }
+
+  .admin-layout {
+    display: grid;
+    grid-template-columns: 220px auto;
+    background-color: #f7f8fc;
+    overflow: hidden;
+    height: 100vh;
+  }
 }
 
 :root {
@@ -96,7 +104,7 @@ input {
   font-size: 14px;
   letter-spacing: 0.2px;
   cursor: pointer;
-  width: 100%;
+  text-align: center;
 }
 
 .button:hover {
@@ -130,7 +138,7 @@ h1 {
 /*--- admin styles ----*/
 .admin-layout {
   display: grid;
-  grid-template-columns: 220px auto;
+  grid-template-columns: auto;
   background-color: #f7f8fc;
   overflow: hidden;
   height: 100vh;
